--- a/_sass/_migrated-fixes.scss
+++ b/_sass/_migrated-fixes.scss
@@ -601,10 +601,6 @@
 }
 
 // Courses Index
-.find-courses {
-  
-}
-
 .course-menu {
   ul {
     list-style: none;
@@ -634,3 +630,94 @@
   }
 }
 
+.find-courses p {
+  font: 1.2em/1.4 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #444;
+}
+.find-courses .course-overview h1 {
+  font: 900 2em/1.2 "brandon-grotesque", "Helvetica Neue", Helvetica, Arial,
+    sans-serif;
+  color: #222;
+  letter-spacing: 0.04em;
+  word-spacing: 0.05em;
+  text-transform: uppercase;
+  padding-top: 1em;
+  margin-top: -1.1em;
+}
+.find-courses .course-overview p.hero {
+  font-family: "brandon-grotesque", "Helvetica Neue", Helvetica, Arial,
+    sans-serif;
+  font-size: 1.6em;
+  line-height: 1.4;
+  padding-bottom: 1em;
+  border-bottom: 1px solid #ddd;
+}
+.find-courses h1 {
+  text-align: left;
+}
+.find-courses .listing-courses {
+  list-style: none;
+  padding: 0px;
+}
+.find-courses .course-item figure img {
+  width: 100%;
+}
+.find-courses .course-item figcaption {
+  background: #444;
+  padding: 1.2em;
+}
+.find-courses .course-item figcaption .gym-button b {
+  font: bold 1.4em/1 "brandon-grotesque", "Helvetica Neue", Helvetica, Arial,
+    sans-serif;
+  letter-spacing: 0.025em;
+  vertical-align: text-top;
+}
+.find-courses .course-item p {
+  font: 1em/1.4 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #262626;
+  margin-top: 0.5em;
+}
+.find-courses .course-item dl {
+  color: #222;
+  letter-spacing: 0.06em;
+  word-spacing: 0.05em;
+  margin-bottom: 0.6em;
+  margin-left: 1.2em;
+  margin-top: 1em;
+}
+.find-courses .course-item dt {
+  font: 900 1em/1.2 "brandon-grotesque", "Helvetica Neue", Helvetica, Arial,
+    sans-serif;
+  color: #222;
+  letter-spacing: 0.06em;
+  word-spacing: 0.05em;
+  text-transform: uppercase;
+  margin-bottom: 0.6em;
+}
+.find-courses .course-item dd {
+  display: list-item;
+  list-style: disc;
+  color: #f89820;
+  margin-top: 0.3em;
+}
+.find-courses .course-item dd span {
+  font: 1em/1.4 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #222;
+}
+.find-courses .course-item article {
+  padding-bottom: 3em;
+  overflow: hidden;
+}
+.find-courses .course-overview h2 {
+  font: 900 1em/1.3 "brandon-grotesque", "Helvetica Neue", Helvetica, Arial,
+    sans-serif;
+  color: #222;
+  letter-spacing: 0.02em;
+  word-spacing: 0.02em;
+  text-transform: uppercase;
+}
+.find-courses .course-overview p,
+.find-courses .course-overview li {
+  font: 1.15em/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #444;
+}
