--- a/_sass/_migrated-fixes.scss
+++ b/_sass/_migrated-fixes.scss
@@ -634,7 +634,7 @@
 }
 
 .find-courses {
-  font-size: 1.2rem;
+  // font-size: 1.2rem;
 
   p {
     font: 1.2em/1.4 "Helvetica Neue", Helvetica, Arial, sans-serif;
