--- a/_sass/_migrated-fixes.scss
+++ b/_sass/_migrated-fixes.scss
@@ -613,9 +613,9 @@
     margin-right: 1.2em;
   }
 
-  a {
+  a,a:link,a:visited {
     display: inline-block;
-    font-size: 1.2rem;
+    font-size: 1.2em;
     line-height: 1.2;
     font-family: $gym-font-stack;
     font-weight: bold;
@@ -634,22 +634,26 @@
 }
 
 .find-courses {
-  // font-size: 1.2rem;
 
   p {
-    font: 1.2em/1.4 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 1.2em;
+    line-height: 1.4;
+    font-family: $gym-text-font-stack;
     color: #444;
   }
 
-  .course-overview h1 {
-    font: 900 2em/1.2 "brandon-grotesque", "Helvetica Neue", Helvetica, Arial,
-      sans-serif;
+  h1 {
+    font-size: 2em;
+    line-height: 1.2;
+    font-family: $gym-font-stack;
+    font-weight: 900;
     color: #222;
     letter-spacing: 0.04em;
     word-spacing: 0.05em;
     text-transform: uppercase;
     padding-top: 1em;
     margin-top: -1.1em;
+    text-align: left;
   }
 
   p.hero {
@@ -661,10 +665,6 @@
     border-bottom: 1px solid #ddd;
   }
 
-  h1 {
-    text-align: left;
-  }
-
   .listing-courses {
     list-style: none;
     padding: 0;
@@ -672,18 +672,23 @@
   .course-item figure img {
     width: 100%;
   }
+
   .course-item figcaption {
     background: #444;
     padding: 1.2em;
   }
   .course-item figcaption .gym-button b {
-    font: bold 1.4em/1 "brandon-grotesque", "Helvetica Neue", Helvetica, Arial,
-      sans-serif;
+    font-size: 1.4em;
+    line-height: 1;
+    font-family: $gym-font-stack;
+    font-weight: bold;
     letter-spacing: 0.025em;
     vertical-align: text-top;
   }
   .course-item p {
-    font: 1em/1.4 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 1em;
+    line-height: 1.4;
+    font-family: $gym-text-font-stack;
     color: #262626;
     margin-top: 0.5em;
   }
@@ -696,8 +701,10 @@
     margin-top: 1em;
   }
   .course-item dt {
-    font: 900 1em/1.2 "brandon-grotesque", "Helvetica Neue", Helvetica, Arial,
-      sans-serif;
+    font-size: 1em;
+    line-height: 1.2;
+    font-family: $gym-font-stack;
+    font-weight: 900;
     color: #222;
     letter-spacing: 0.06em;
     word-spacing: 0.05em;
@@ -719,8 +726,10 @@
     overflow: hidden;
   }
   .course-overview h2 {
-    font: 900 1em/1.3 "brandon-grotesque", "Helvetica Neue", Helvetica, Arial,
-      sans-serif;
+    font-size: 1em;
+    line-height: 1.3;
+    font-family: $gym-font-stack;
+    font-weight: 900;
     color: #222;
     letter-spacing: 0.02em;
     word-spacing: 0.02em;
