tweak white-panel

--- a/css/main.scss
+++ b/css/main.scss
@@ -155,8 +155,7 @@ body.view-in-course {
   }
 }
 
-.white-panel,
-.container.white-panel {
+.white-panel {
   background-color: $gym-white;
   border: 1px solid $gym-gray;
   border-radius: 2px;
@@ -1620,9 +1619,6 @@ https://github.com/gymnasium/tracker/issues/85
 
 main p > a:not([class]),
 main li:not([class]) > a:not([class]),
-.white-panel p > a:not(.btn),
-.white-panel li:not([class]) > a:not(.btn),
-.course-menu a:not(.btn),
 main label a:not([class]),
 .login-form a.forgot-password {
   line-height: inherit;
@@ -1638,15 +1634,6 @@ main p > a:not([class]):active,
 main li:not([class]) > a:not([class]):hover,
 main li:not([class]) > a:not([class]):focus,
 main li:not([class]) > a:not([class]):active,
-.white-panel p > a:not(.btn):hover,
-.white-panel p > a:not(.btn):focus,
-.white-panel p > a:not(.btn):active,
-.white-panel li:not([class]) > a:not(.btn):hover,
-.white-panel li:not([class]) > a:not(.btn):focus,
-.white-panel li:not([class]) > a:not(.btn):active,
-.course-menu a:not(.btn):hover,
-.course-menu a:not(.btn):focus,
-.course-menu a:not(.btn):active,
 main label a:not([class]):hover,
 main label a:not([class]):focus,
 main label a:not([class]):active,
