--- a/css/static-sidebar-content.scss
+++ b/css/static-sidebar-content.scss
@@ -59,17 +59,6 @@ sidebar-generic.html
 }
 
 // main content / adjustment for vertical rule
-
-.white-panel {
-  // .col-md-9 {
-  //   padding-top: 1.2em;
-  //   padding-right: 1.2em;
-  //   padding-bottom: 12em;
-  //   margin-top: -1.2em;
-  //   margin-bottom: -12em;
-  // }
-}
-
 @include breakpoint(medium, min) {
   // main content / vertical rule
 
@@ -80,9 +69,10 @@ sidebar-generic.html
   // sidebar / layout adjustment
 
   .sidebar-static {
-    // padding-top: 1.2em;
-    // margin-top: -1.2em;
-    // margin-right: -2.2em;
+    padding-top: 1.2em;
+    margin-top: -1.2em;
+    margin-right: -1.5rem;
+    margin-left: 0.5rem;
   }
 }
 
