--- a/css/static-sidebar-content.scss
+++ b/css/static-sidebar-content.scss
@@ -69,7 +69,7 @@ sidebar-generic.html
   // sidebar / layout adjustment
 
   .sidebar-static {
-    padding-top: 1.2em;
+    padding: 0;
     margin-top: -1.2em;
     margin-right: -1.5rem;
     margin-left: 0.5rem;
