--- a/_sass/_migrated-fixes.scss
+++ b/_sass/_migrated-fixes.scss
@@ -628,12 +628,14 @@
 
     &:active,
     &:hover {
-      color: #f89820;
+      text-decoration: none;
+      border-bottom-width: 2px;
+      margin-bottom: -0.125rem;
     }
   }
 }
 
-.find-courses {
+.catalog-content {
 
   p {
     font-size: 1.2em;
