--- a/css/main.scss
+++ b/css/main.scss
@@ -162,9 +162,8 @@ body.view-in-course {
   font-family: $gym-text-font-stack;
   font-size: 1.2em;
   line-height: 1.5;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  padding: 1em 2.2em 2.2em;
+  margin: 20px auto;
+  padding: 1em;
   overflow: hidden;
 
   ul {
