--- a/_sass/_migrated-fixes.scss
+++ b/_sass/_migrated-fixes.scss
@@ -604,7 +604,7 @@
 .course-menu {
   ul {
     list-style: none;
-    margin: 1.2em 15px;
+    margin: 1.2em 15px 0;
     padding: 0;
   }
 
@@ -623,11 +623,12 @@
     text-transform: uppercase;
     letter-spacing: 0.04em;
     word-spacing: 0.04em;
-    border-bottom: 1px dashed transparent;
+    border-bottom: 1px solid #222;;
     margin-top: 0.125em;
 
     &:active,
     &:hover {
+      color: #222;
       text-decoration: none;
       border-bottom-width: 2px;
       margin-bottom: -0.125rem;
