--- a/css/static-sidebar-content.scss
+++ b/css/static-sidebar-content.scss
@@ -71,7 +71,7 @@ sidebar-generic.html
   .sidebar-static {
     padding: 0;
     margin-top: -1.2em;
-    margin-right: -1.5rem;
+    margin-right:0;
     margin-left: 0.5rem;
   }
 }
