--- a/_sass/_migrated-fixes.scss
+++ b/_sass/_migrated-fixes.scss
@@ -654,8 +654,7 @@
     text-transform: uppercase;
   }
   p, li {
-    font: 1.15em/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #444;
+    font-size: font-calc(18, rem, 10px);
   }
 
   .course-item figure img {
@@ -666,13 +665,7 @@
     background: #444;
     padding: 1.2em;
   }
-  .course-item p {
-    font-size: 1em;
-    line-height: 1.4;
-    font-family: $gym-text-font-stack;
-    color: #262626;
-    margin-top: 0.5em;
-  }
+
   .course-item dl {
     color: #222;
     letter-spacing: 0.06em;
@@ -682,7 +675,7 @@
     margin-top: 1em;
   }
   .course-item dt {
-    font-size: 1em;
+    font-size: font-calc(16, rem, 10px);
     line-height: 1.2;
     font-family: $gym-font-stack;
     font-weight: 900;
@@ -699,7 +692,7 @@
     margin-top: 0.3em;
   }
   .course-item dd span {
-    font: 1em/1.4 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: font-calc(16, rem, 10px);
     color: #222;
   }
   .course-item article {
@@ -708,38 +701,30 @@
   }
 }
 
-.catalog-content {
-
-  p.hero {
-    font-family: "brandon-grotesque", "Helvetica Neue", Helvetica, Arial,
-      sans-serif;
-    font-size: font-calc(32);
-    line-height: 1.4;
-    padding-bottom: 1em;
-    border-bottom: 1px solid #ddd;
+.courses-container {
+  header {
+    p.hero {
+      font-family: $gym-font-stack;
+      font-size: font-calc(22, rem, 10px);
+      line-height: 1.4;
+      padding-bottom: 1em;
+      border-bottom: 1px solid #ddd;
+    }
+  
+    h1 {
+      font-size: font-calc(28, rem, 10px);
+      line-height: 1.2;
+      font-family: $gym-font-stack;
+      font-weight: 900;
+      color: #222;
+      letter-spacing: 0.04em;
+      word-spacing: 0.05em;
+      text-transform: uppercase;
+      padding-top: 1em;
+      margin-top: -1.1em;
+      text-align: left;
+    }
   }
-
-  p {
-    font-size: 1.2em;
-    line-height: 1.4;
-    font-family: $gym-text-font-stack;
-    color: #444;
-  }
-
-  h1 {
-    font-size: font-calc(32);
-    line-height: 1.2;
-    font-family: $gym-font-stack;
-    font-weight: 900;
-    color: #222;
-    letter-spacing: 0.04em;
-    word-spacing: 0.05em;
-    text-transform: uppercase;
-    padding-top: 1em;
-    margin-top: -1.1em;
-    text-align: left;
-  }
-
 }
 
 
