--- a/_sass/_migrated-fixes.scss
+++ b/_sass/_migrated-fixes.scss
@@ -644,15 +644,13 @@
   padding: 0;
 
   h2 {
-    font-size: 1em;
-    line-height: 1.3;
-    font-family: $gym-font-stack;
-    font-weight: 900;
-    color: #222;
-    letter-spacing: 0.02em;
-    word-spacing: 0.02em;
-    text-transform: uppercase;
+    font-size: font-calc(22, rem, 10px);
   }
+
+  h1 {
+    font-size: font-calc(32, rem, 10px);
+  }
+
   p, li {
     font-size: font-calc(18, rem, 10px);
   }
