--- a/css/main.scss
+++ b/css/main.scss
@@ -2475,3 +2475,9 @@ aside.system-status {
 
 // Import migrated fixes
 @import "migrated-fixes";
+
+// Import dashboard
+@import "dashboard";
+
+// Import account settings
+@import "account-settings";
